--- a/website.html
+++ b/website.html
@@ -37,11 +37,11 @@
 <hr>
 <p><h1><B>SOCIAL MEDIA</B></h1></p>
 <pre><h2>
-<a href="https://www.instagram.com/cold.003/">instagram</a>
+<a href="https://www.instagram.com/cold.003/"target="_main">instagram</a>
 
-<a href="https://twitter.com/coldwinds003">X</a>
+<a href="https://twitter.com/coldwinds003"target="_main">X</a>
 
-<a href="https://www.threads.net/@cold.003">Threads</a>
+<a href="https://www.threads.net/@cold.003"target="_main">Threads</a>
 
 </h2></pre>
 <hr>
@@ -50,9 +50,13 @@
     Learn without
     Lmits..............
 </B></h1>
+<pre><h1><B>
+    LOGIN...
+</B></h1>
 <pre><h3>
-    ---<input type="usernae"placeholder="name">
+    ---<input type="username"placeholder="mail">
 
+    ---<input type="text"placeholder="password">
 
 </h3>
 </pre>
